--- a/index.html
+++ b/index.html
@@ -344,7 +344,18 @@
                 <use href="./images/symbol-defs.svg#icon-linkedin" width="20" height="20"></use>
               </svg></a></li>
         </ul>
-      </div>
+        <!--Форма-->
+      </div>  <div class="form-footer-block">
+        <h3 class="footer-title">Подпишитесь на рассылку</h3>
+      <form class="form-footer">
+      
+        <label class="form-label"><input class="form-input" type="email" nane="mail" placeholder="Email"></label>
+        <input  class="form-btn"
+        type="submit" value="Подписаться">
+        <svg class="form-footer-icon">
+          <use href="./images/symbol-defs.svg#icon-icon-send" width="24" height="24"></use>
+        </svg>
+      </form></div>
 
 
 
