--- a/index.html
+++ b/index.html
@@ -343,18 +343,17 @@
                 class="cocial-media-icon footer-icon">
                 <use href="./images/symbol-defs.svg#icon-linkedin" width="20" height="20"></use>
               </svg></a></li>
-        </ul>
+        </ul>  </div>
         <!--Форма-->
-      </div>  <div class="form-footer-block">
+      <div class="form-footer-block">
         <h3 class="footer-title">Подпишитесь на рассылку</h3>
       <form class="form-footer">
       
-        <label class="form-label"><input class="form-input" type="email" nane="mail" placeholder="Email"></label>
-        <input  class="form-btn"
-        type="submit" value="Подписаться">
-        <svg class="form-footer-icon">
+        <label class="form-label"><input class="form-input" type="email" name="mail" placeholder="Email"></label>
+        <button  class="form-btn"
+        type="submit">Подписаться<svg class="form-footer-icon">
           <use href="./images/symbol-defs.svg#icon-icon-send" width="24" height="24"></use>
-        </svg>
+        </svg></button>
       </form></div>
 
 
@@ -364,10 +363,11 @@
   <!--Модальное окно-->
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-      <button type="button" class="modal-button-close" data-modal-close> <svg class=" modal-close-icon" width="18"
+      <button type="button" class="modal-button-close" data-modal-close><svg class=" modal-close-icon" width="18"
           height="18">
           <use href="./images/symbol-defs.svg#icon-close"></use>
         </svg></button>
+       
     </div>
   </div>
   <!--Скрипты-->
