--- a/portfolio.html
+++ b/portfolio.html
@@ -235,7 +235,7 @@
         </address>
       </div>
       <div class="footer-right">
-        <h3 class="footer-title">присоединяйтесь</h3>
+        <p class="footer-title">присоединяйтесь</p>
         <ul class="footer-cocial-media-list list ">
           <li class=" footer-cocial-item cocial-media-item"> <a class="cocial-link" href=""><svg
                 class="cocial-media-icon footer-icon">
@@ -257,7 +257,7 @@
         
       </div>
     <div class="form-footer-block">
-      <h3 class="footer-title">Подпишитесь на рассылку</h3>
+      <p class="footer-title">Подпишитесь на рассылку</p>
       <form class="form-footer">
     
         <label class="form-label"><input class="form-input" type="email" name="mail" placeholder="Email"></label>
