--- a/index.html
+++ b/index.html
@@ -349,16 +349,13 @@
       <div class="form-footer-block">
         <p class="footer-title">Подпишитесь на рассылку</p>
         <form class="form-footer">
-
           <label class="form-label"><input class="form-input" type="email" name="mail" placeholder="Email"></label>
           <button class="form-btn" type="submit">Подписаться<svg class="form-footer-icon">
               <use href="./images/symbol-defs.svg#icon-icon-send" width="24" height="24"></use>
             </svg></button>
         </form>
       </div>
-
-
-
+      
     </div>
   </footer>
   <!--Модальное окно-->
@@ -400,7 +397,7 @@
 
         </label>
 
-        <label class="modal-form-field">Комментарий
+        <label class="modal-form-field margine-massage">Комментарий
           <textarea class="modal-form-massage" name="user-massage" placeholder="Введите текст"></textarea>
         </label>
 <input class="modal-form-checkbox visually-hidden" type="checkbox" id="accept-policy">
