--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
           height="18">
           <use href="./images/symbol-defs.svg#icon-close"></use>
         </svg></button>
-      <!--фозма модального окна-->
+      <!--форма модального окна-->
       <form class="modal-form">
         <p class="modal-form-title">Оставьте свои данные, мы вам перезвоним</p>
 
