--- a/portfolio.html
+++ b/portfolio.html
@@ -19,33 +19,35 @@
 </head>
 
 <body>
-  <!--шапка-->
-  <header class="page-header">
-    <div class="container header-content">
+<!--шапка-->
+<header class="header page-header">
+  <div class="container header-content">
 
-      <nav class="header-nav">
-        <a class="header-logo link" href="/"> <span class="header-logo-part">Web</span>Studio</a>
-        <ul class="menu-list list">
-          <li class="menu-item"><a class="menu menu-link link " href="./index.html">Студия</a></li>
+    <nav class="nav">
+      <a class=" logo header__logo link" href="/"> <span class="logo__part">Web</span>Studio</a>
+      <ul class="nav__menu-list list">
+        <li class="nav__menu-item "><a class=" menu nav__menu-link link " href="./index.html">Студия</a></li>
 
-          <li class="menu-item"><a class=" menu menu-link current link" href="./portfolio.html">Портфолио</a></li>
-          <li class="menu-item"><a class="menu menu-link link" href="#">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="menu-auto-list list">
-        <li class="menu-auto-item "> <a class=" menu header-mail link" href="mailto:info@devstudio.com"> <svg
-              class="i-envelope icon ">
-              <use href="./images/symbol-defs.svg#icon-envelope "></use>
-            </svg>
-            info@devstudio.com</a>
-        </li>
-        <li class="menu-auto-item "><a class=" menu header-tel link " href="tel:380961111111"><svg
-              class="i-smartphone icon">
-              <use href="./images/symbol-defs.svg#icon-smartphone "></use>
-            </svg>+38 096 111 11 11</a> </li>
+        <li class="nav__menu-item"><a class=" menu nav__menu-link current  link" href="./portfolio.html">Портфолио</a></li>
+        <li class="nav__menu-item"><a class="menu nav__menu-link link" href="#">Контакты</a></li>
       </ul>
-    </div>
-  </header>
+    </nav>
+
+
+    <ul class="header__contact-list list">
+      <li class="header__contact-item "> <a class=" menu header__mail link" href="mailto:info@devstudio.com"> <svg
+            class="i-envelope icon ">
+            <use href="./images/symbol-defs.svg#icon-envelope "></use>
+          </svg>
+          info@devstudio.com</a>
+      </li>
+      <li class="header__contact-item "><a class=" menu header__tel link " href="tel:380961111111"><svg
+            class="i-smartphone icon">
+            <use href="./images/symbol-defs.svg#icon-smartphone "></use>
+          </svg>+38 096 111 11 11</a> </li>
+    </ul>
+  </div>
+</header>
   <!--главная секция-->
   <main>
     <section class=" section section-portfolio ">
@@ -222,8 +224,8 @@
   <footer class="footer">
     <div class="container footer-flex">
 
-      <div class="footer-left"> <a class="footer-logo link" href="/"> <span
-            class="header-logo-part">Web</span>Studio</a>
+      <div class="footer-left"> <a class=" logo footer-logo link" href="/"> <span
+            class="logo__part">Web</span>Studio</a>
         <address class="address">
           <ul class="adress-item">
             <li class="adress-list list"><a class="adress-area link" href="">г.Киев, пр-т Леси Украинки, 26</a></li>
